bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q1 (String).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, &query_str).await"
---
{
  "head": {
    "vars": [
      "productType",
      "reviewCount"
    ]
  },
  "results": {
    "bindings": [
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType1"
        },
        "reviewCount": {
          "type": "literal",
          "value": "108",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType4"
        },
        "reviewCount": {
          "type": "literal",
          "value": "29",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType2"
        },
        "reviewCount": {
          "type": "literal",
          "value": "26",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType3"
        },
        "reviewCount": {
          "type": "literal",
          "value": "24",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType5"
        },
        "reviewCount": {
          "type": "literal",
          "value": "19",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType14"
        },
        "reviewCount": {
          "type": "literal",
          "value": "12",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType104"
        },
        "reviewCount": {
          "type": "literal",
          "value": "11",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType19"
        },
        "reviewCount": {
          "type": "literal",
          "value": "11",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType32"
        },
        "reviewCount": {
          "type": "literal",
          "value": "11",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "productType": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType10"
        },
        "reviewCount": {
          "type": "literal",
          "value": "10",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      }
    ]
  }
}
