bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q2 (PlainTerm).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, &query_str).await"
---
{
  "head": {
    "vars": [
      "otherProduct",
      "sameFeatures"
    ]
  },
  "results": {
    "bindings": [
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product247"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "9",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer3/Product132"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "8",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product436"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "7",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product566"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "6",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer19/Product871"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "6",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer2/Product87"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "6",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer5/Product196"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "6",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product237"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "6",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer14/Product639"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "5",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "otherProduct": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product598"
        },
        "sameFeatures": {
          "type": "literal",
          "value": "4",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      }
    ]
  }
}
