bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q3 (ObjectId).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, &query_str).await"
---
{
  "head": {
    "vars": [
      "product",
      "ratio"
    ]
  },
  "results": {
    "bindings": [
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer15/Product713"
        },
        "ratio": {
          "type": "literal",
          "value": "3",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer5/Product202"
        },
        "ratio": {
          "type": "literal",
          "value": "3",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product384"
        },
        "ratio": {
          "type": "literal",
          "value": "3",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product457"
        },
        "ratio": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product504"
        },
        "ratio": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product518"
        },
        "ratio": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product530"
        },
        "ratio": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer14/Product665"
        },
        "ratio": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product790"
        },
        "ratio": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product300"
        },
        "ratio": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      }
    ]
  }
}
