bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q4 (Object ID).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, include_str!(\"./queries/bi-q4.sparql\")).await"
---
{
  "head": {
    "vars": [
      "feature",
      "priceRatio"
    ]
  },
  "results": {
    "bindings": [
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature107"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.1874901"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4293"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.1874901"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4295"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.1874901"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4299"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.1874901"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4301"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.1874901"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature99"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.186319"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1388"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.1813656"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature117"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.129555"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4265"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.1218351"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1387"
        },
        "priceRatio": {
          "datatype": "http://www.w3.org/2001/XMLSchema#float",
          "type": "literal",
          "value": "1.0916775"
        }
      }
    ]
  }
}
