bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q4 (PlainTerm).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, &query_str).await"
---
{
  "head": {
    "vars": [
      "feature",
      "priceRatio"
    ]
  },
  "results": {
    "bindings": [
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature107"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1874901",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4293"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1874901",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4295"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1874901",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4299"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1874901",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4301"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1874901",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature99"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.186319",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1388"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1813655",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature117"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1295546",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature4265"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.1218349",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "feature": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1387"
        },
        "priceRatio": {
          "type": "literal",
          "value": "1.0916777",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      }
    ]
  }
}
