bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q5 (ObjectId).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, &query_str).await"
---
{
  "head": {
    "vars": [
      "country",
      "product",
      "nrOfReviews",
      "avgPrice"
    ]
  },
  "results": {
    "bindings": [
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#US"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product443"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "10",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5117.6626",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#US"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product451"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "10",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5658.503",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#CN"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product471"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "4",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5028.49",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#FR"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product451"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "4",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5658.503",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#RU"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product546"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "4",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "4670.0396",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#AT"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product546"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "4670.0396",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#DE"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product529"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5107.37",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#ES"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer9/Product443"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5117.6626",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#GB"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product560"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "4828.3696",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#JP"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer12/Product560"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "2",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "4828.3696",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#KR"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product471"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "1",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5028.49",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "country": {
          "type": "uri",
          "value": "http://downlode.org/rdf/iso-3166/countries#KR"
        },
        "product": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product529"
        },
        "nrOfReviews": {
          "type": "literal",
          "value": "1",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        },
        "avgPrice": {
          "type": "literal",
          "value": "5107.37",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      }
    ]
  }
}
